<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_layout"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_edit_text"
                android:paddingBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:nextFocusUp="@id/name_edit_text"
                android:nextFocusLeft="@id/name_edit_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags_to_fetch_text"
                android:id="@+id/textView"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <com.ryannm.android.ankimate.TextCompletionView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fetch_tags_edit_tokens_text"
                android:paddingBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

       <!--     <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_same_tags_checkbox_text"
                android:id="@+id/use_same_tags_switch"
                android:checked="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp" /> -->

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_same_tags_checkbox_text"
                android:id="@+id/use_same_tags_switch"
                android:checked="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags_to_save_with"
                android:id="@+id/tags_to_save_with_text_view"
                android:visibility="gone"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="8dp" />

            <com.ryannm.android.ankimate.TextCompletionView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_tags_edit_tokens_text"
                android:visibility="gone"
                android:paddingBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:elegantTextHeight="false" />

            <include layout="@layout/type_deck_spinner"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/imageView"
                    android:background="#000000"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:adjustViewBounds="false"
                    android:alpha="12"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_keywords"
                    android:paddingBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/textView2"
                    android:paddingTop="8dp"
                    android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:visibility="visible"
                 android:id="@+id/field_keywords_recyclerview"
                android:layout_marginTop="4dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/confirm_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>